OOP Review Phase 2: Complete module review and standardization
- Fixed 6 Mermaid diagram syntax issues
- Rewrote 5 files with ZERO sections (abstraction, solid, composition, dependency, mistakes)
- Improved 25+ files with missing sections
- Added 2 new topics: object-copying, serialization
- All 37 files now have 27/27 required sections
- All examples use Java 21, Google Java Style
- Created OOP_REVIEW_PHASE_2.md report